--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 
-set(PROJECT_NAME panda-test)
+set(PROJECT_NAME openGL-learn)
 project(${PROJECT_NAME})
 
 add_executable(${PROJECT_NAME} src/main.cpp)
